src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_ansi_escape_codes_in_strings-2.snap
---
source: src/regression_tests/parser.rs
description: "\"\t\""
---
Term
    [0;95;1m([0m SimpleString
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value =
                [0;35m[[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1m\x9[0m[0;97;1m"[0m [0;36m][0m
                [0;35m][0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
